--- a/IBIN/Views/Admin/AddSpecies.cshtml
+++ b/IBIN/Views/Admin/AddSpecies.cshtml
@@ -23,7 +23,7 @@
         @Html.LabelFor(model => model.FileName, new { @class = "col-md-2 control-label" })
 
         <div class="col-md-3">
-            <input type="file" id="FileName" name="FileName" />
+            <input type="file" id="SpeciesFile" name="SpeciesFile" />
         </div>
 
         <div class="col-md-3">
