--- a/IBIN/Views/Shared/_LayoutAdmin.cshtml
+++ b/IBIN/Views/Shared/_LayoutAdmin.cshtml
@@ -235,6 +235,8 @@
                                 <li class="active"><a href="#">Home</a></li>
                                 <li><a href="@Url.Action("Species","Admin")">Species</a></li>
                                 <li><a href="@Url.Action("Chemical","Admin")">Chemical</a></li>
+                                <li><a href="@Url.Action("ChangePassword","Admin")">Change Password</a></li>
+                                <li><a href="@Url.Action("Index","Admin")">Log out</a></li>
 
                             </ul>
                         </div><!--end collapse-->
