--- a/IBIN/Views/Shared/_LayoutAdmin.cshtml
+++ b/IBIN/Views/Shared/_LayoutAdmin.cshtml
@@ -236,7 +236,7 @@
                                 <li><a href="@Url.Action("Species","Admin")">Species</a></li>
                                 <li><a href="@Url.Action("Chemical","Admin")">Chemical</a></li>
                                 <li><a href="@Url.Action("ChangePassword","Admin")">Change Password</a></li>
-                                <li><a href="@Url.Action("Index","Admin")">Log out</a></li>
+                                <li><a href="@Url.Action("LogOut","Admin")">Log out</a></li>
 
                             </ul>
                         </div><!--end collapse-->
