--- a/IBIN/Views/Species/_SpeciesList.cshtml
+++ b/IBIN/Views/Species/_SpeciesList.cshtml
@@ -29,8 +29,9 @@
     <div class="col-lg-12">
         <div style="float: right;">
             <ul class="pagination">
-                @for (int i = 1; i <= ViewBag.PageCount; i++)
-            {
+                <li><a href="javascript:PagerClick(@(Model.draw==1?1:Model.draw-1));"><<</a></li>
+                @for (int i = Model.draw == 1 ? 1 : Model.draw == ViewBag.PageCount?Model.draw-10: Model.draw + 1; i <= (Model.draw==ViewBag.PageCount ? Model.draw:Model.draw+10  ); i++)
+                {
 
                     if (i != ViewBag.CurrentPageIndex)
                     {
@@ -43,6 +44,7 @@
                 }
 
             }
+                <li><a href="javascript:PagerClick(@(Model.draw==Model.recordsTotal?Model.draw:Model.draw+11));" disabled="@(Model.draw==ViewBag.PageCount?true:false)" >>></a></li>
             </ul>
         </div>
     </div>
