--- a/IBIN/Views/Chemical/_ChemicalList.cshtml
+++ b/IBIN/Views/Chemical/_ChemicalList.cshtml
@@ -1,11 +1,11 @@
-﻿@model IBIN.CORE.Models.DataTableRequest<IBIN.DAL.Species>
+﻿@model IBIN.CORE.Models.DataTableRequest<IBIN.DAL.Chemical>
 
 @{
     Layout = null;
 }
 
 <div class="col-lg-12" style="border-bottom:1px solid #ccc; ">
-    <h2 class="gallery_spcies ">Species List</h2>
+    <h2 class="gallery_spcies ">Chemical List</h2>
 </div>
 
 <div class="col-lg-12" >
@@ -17,7 +17,7 @@
 
                 <a herf="#">
                     <img class="img-responsive" height="195px" width="165px" src="~/UploadedFiles/SpeciesFile/@item.FileName" style="border: 10px solid #ddd;" />
-                    <h4 class="punica"><a href="@Url.Action("Description","Species")">@item.SpeciesName</a></h4>
+                    <h4 class="punica"><a href="@Url.Action("Description","Species")">@item.ChemicalName</a></h4>
                 </a>
             </div>
         </div>
