--- a/IBIN/Views/Species/Index.cshtml
+++ b/IBIN/Views/Species/Index.cshtml
@@ -22,22 +22,53 @@
 
 
 
-    <div class="col-sm-9" id="gallery">
-
-
-       
-
+    <div class="col-sm-9" >
         
-    </div>
+        <div class="col-lg-12" style="border-bottom:1px solid #ccc; ">
+            <h2 class="gallery_spcies ">Species List</h2>
+        </div>
+        <div class="row" id="gallery">
+
+            </div>
+
+        </div>
 
     <!--end_gallery-->
-
+    <div id="modalloader">
+        <div class="loaderimage">
+            <img src="~/Content/images/giphy.gif"  />
+        </div>
+    </div>
 
 </div>
 
+
+<style>
+    #modalloader
+    {
+        position:absolute;
+         width: 900px;
+    height: 900px;
+    z-index: 999999;
+    display:block;
+      z-index:99999;
+      left: 378px;
+	top: 221px;
+  
+ 
+    }
+    .loaderimage
+    {
+        margin-top:100px;
+    
+        margin-left:300px;
+        
+    }
+    </style>
+
 <script>
     $(document).ready(function () {
-        PagerClick(1);
+       
         $("#txtscientific").keyup(function () {
             PagerClick(1);
 
@@ -45,8 +76,10 @@
     });
 
     function PagerClick(i) {
+        debugger;
         var search = { value: $("#txtscientific").val() }
-        var request = { draw: i, start: (i - 1) * 12, length: 12, search: search,IsHome:true };
+        var request = { draw: i, start: (i - 1) * 12, length: 12, search: search, IsHome: true };
+        $("#modalloader").show();
         $.ajax({
             type: "POST",
             url: $_GetSpecies,
@@ -64,8 +97,11 @@
             data: { model: model },
             success: function (resultdata) {
                 $("#gallery").html(resultdata);
+                $("#modalloader").hide();
             }
         });
     }
+
+    PagerClick(1);
 </script>
 
