description page changes

--- a/IBIN/Views/Chemical/Description.cshtml
+++ b/IBIN/Views/Chemical/Description.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="row">
+﻿
+
+<div class="row">
     <div class="col-sm-12 col-xs-12 overview">
         <ul class="overview_list">
             <li><a herf="#">Overview</a></li>
@@ -19,7 +21,7 @@
 
             <div class="col-sm-12 col-xs-12">
                 <div class="imgres">
-                    <img src="images/ibinImages/map-over.jpg" class="img-responsive center" />
+                    <img src="../Content/images/ibinImages/map-over.jpg" class="img-responsive center" />
                     <h5>Punica granatum</h5>
                 </div>
             </div>
