--- a/IBIN/Views/Home/Index.cshtml
+++ b/IBIN/Views/Home/Index.cshtml
@@ -79,20 +79,20 @@
                                 <!-- Bottom switcher of slider -->
                                 <ul class="hide-bullets">
                                     <li class="col-md-4 col-sm-6">
-                                        <a class="thumbnail" id="carousel-selector-16">
+                                        <a class="thumbnail" href="@Url.Action("Index","Species")" id="carousel-selector-16">
                                             <img src="~/Content/images/ibinImages/species-over.jpg" class="img-responsive">
                                         </a>
 
                                     </li>
 
                                     <li class="col-md-4 col-sm-6">
-                                        <a class="thumbnail" id="carousel-selector-1">
+                                        <a class="thumbnail"  id="carousel-selector-1">
                                             <img src="~/Content/images/ibinImages/map-over.jpg" class="img-responsive">
                                         </a>
                                     </li>
 
                                     <li class="col-md-4 col-sm-6">
-                                        <a class="thumbnail" id="carousel-selector-2">
+                                        <a class="thumbnail" href="@Url.Action("Index","Chemical")" id="carousel-selector-2">
                                             <img src="~/Content/images/ibinImages/chemic-over.jpg" class="img-responsive">
                                         </a>
 
