--- a/IBIN/Views/Species/Description.cshtml
+++ b/IBIN/Views/Species/Description.cshtml
@@ -1,4 +1,112 @@
-﻿<div class="row">
+﻿<style type="text/css">
+    ul {
+        list-style: none;
+    }
+
+
+
+
+
+    .overview {
+        width: 100%;
+        background: #912400;
+        margin-top: 15px;
+    }
+
+    .overview_list {
+        margin-bottom: 0;
+    }
+
+        .overview_list li {
+            display: inline-block;
+        }
+
+            .overview_list li a {
+                display: inline-block;
+                color: #fff;
+                text-transform: uppercase;
+                letter-spacing: .1em;
+                text-decoration: none;
+                padding: 19px 0px 16px 20px;
+                font-weight: bold;
+                font-size: 15px;
+                cursor: pointer;
+            }
+
+                .overview_list li a:hover {
+                    color: #808080;
+                }
+
+    .tbl_Content {
+        color: #787878;
+        padding-left: 23px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .bassic_element {
+        color: #ff8000;
+        padding-left: 1px;
+        font-size: 15px;
+    }
+
+    .banglore {
+        border: 1px solid #bbb;
+    }
+
+    .bio_zone {
+        color: #63a2a6;
+        font-weight: 500;
+        border-bottom: 1px solid #bbb;
+    }
+
+    .usa_main {
+        width: 100%;
+    }
+
+    .bio_grap_zone {
+        width: 100%;
+        border-bottom: 1px solid #bbb;
+    }
+
+        .bio_grap_zone p {
+            line-height: 6px;
+            font-size: 12px;
+            color: #787878;
+            text-align: left;
+            padding-left: 60px;
+            vertical-align: middle !important;
+            margin-top: 11px;
+        }
+
+    .usaban {
+        margin-top: 31px;
+    }
+
+        .usaban p {
+            font-size: 14px;
+            color: #787878;
+            text-align: left;
+            padding-left: 70px;
+            margin-top: 23px;
+        }
+
+            .usaban p hover {
+                color: #ffffff;
+            }
+
+    .lang {
+        float: right;
+    }
+
+    .imgres .img-responsive {
+        margin: 0 auto;
+    }
+</style>
+
+
+
+<div class="row">
     <div class="col-sm-12 col-xs-12 overview">
         <ul class="overview_list">
             <li><a herf="#">Overview</a></li>
@@ -19,7 +127,7 @@
 
             <div class="col-sm-12 col-xs-12">
                 <div class="imgres">
-                    <img src="images/ibinImages/map-over.jpg" class="img-responsive center" />
+                    <img src="~/Content/images/ibinImages/map-over.jpg" class="img-responsive center" />
                     <h5>Punica granatum</h5>
                 </div>
             </div>
@@ -126,7 +234,7 @@
 
                             <p style="text-decoration: underline; cursor: pointer"><a herf="#">USA, Bengaluru</a></p>
                             <a herf="#">
-                                <img src="images/index.png" style="margin-left: 70px;">
+                                <img src="~/Content/images/index.png" style="margin-left: 70px;">
                             </a>
                         </div>
 
@@ -205,7 +313,7 @@
 
                             <p style="text-decoration: underline; cursor: pointer"><a herf="#">USA, Bengaluru</a></p>
                             <a herf="#">
-                                <img src="images/index.png" style="margin-left: 70px;">
+                                <img src="~/Content/images/index.png" style="margin-left: 70px;">
                             </a>
                         </div>
 
@@ -271,7 +379,7 @@
 
                             <p style="text-decoration: underline; cursor: pointer"><a herf="#">USA, Bengaluru</a></p>
                             <a herf="#">
-                                <img src="images/index.png" style="margin-left: 70px;">
+                                <img src="~/Content/images/index.png" style="margin-left: 70px;">
                             </a>
                         </div>
 
