--- a/IBIN/Views/Species/_SpeciesList.cshtml
+++ b/IBIN/Views/Species/_SpeciesList.cshtml
@@ -16,11 +16,12 @@
 
                 <a herf="#">
                     <img class="img-responsive" height="195px" width="165px" src="~/UploadedFiles/SpeciesFile/@item.FileName" style="border: 10px solid #ddd;" />
-                    <h4 class="punica"><a href="@Url.Action("Description", "Species",new { option="com_ibin",task="speciedetails",id=item.SpeciesId})">@item.SpeciesName</a></h4>
+                    @*<h4 class="punica"><a href="@Url.Action("Description", "Species",new { option="com_ibin",task="speciedetails",id=item.SpeciesId})">@item.SpeciesName</a></h4>*@
+                    <h4 class="punica"><a href="@(Url.Action("Description", "Species")+"?id="+item.SpeciesId+"&option=com_ibin&task=speciedetails")">@item.SpeciesName</a></h4>
                 </a>
             </div>
         </div>
-    }
+    }&
 
     </div>
 
