--- a/IBIN/Views/Admin/Species.cshtml
+++ b/IBIN/Views/Admin/Species.cshtml
@@ -6,9 +6,9 @@
 }
 
 <h2>Species</h2>
-<div class="row">
+@*<div class="row">
     @Html.ActionLink("AddSpecies","AddSpecies", "Admin")
-    </div>
+    </div>*@
 <div class="row">
         <table id="species" class="display" cellspacing="0" width="100%">
             <thead>
