--- a/IBIN/Views/Chemical/Description.cshtml
+++ b/IBIN/Views/Chemical/Description.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IBIN.DAL.Chemical
 
 <div class="row">
     <div class="col-sm-12 col-xs-12 overview">
@@ -21,7 +21,7 @@
 
             <div class="col-sm-12 col-xs-12">
                 <div class="imgres">
-                    <img src="../Content/images/ibinImages/map-over.jpg" class="img-responsive center" />
+                    <img src="~/UploadedFiles/ChemicalFile/@Model.FileName" class="img-responsive center" />
                     <h5>Punica granatum</h5>
                 </div>
             </div>
