--- a/IBIN/Views/Chemical/Index.cshtml
+++ b/IBIN/Views/Chemical/Index.cshtml
@@ -8,10 +8,10 @@
                 <label>Scientific name</label>
                 <input type="text" id="txtscientific">
 
-                <label>Scientific name</label>
+                <label>Common Name</label>
                 <input type="text">
 
-                <label>Scientific name</label>
+                <label>Text</label>
                 <input type="text">
             </form>
         </div>
