--- a/IBIN/Views/Shared/_LayoutAdmin.cshtml
+++ b/IBIN/Views/Shared/_LayoutAdmin.cshtml
@@ -267,7 +267,11 @@
                             <li class="has-sub">
                                 <a href="#">HOME<span class="sub-arrow"></span></a>
                                 <ul class="sub_menu_tax">
-                                    <li><a href="@Url.Action("Index","Admin")">list</a></li>
+                                    <li><a href="@Url.Action("AddSpecies","Admin")">Add Species</a></li>
+
+                                </ul>
+                                <ul class="sub_menu_tax">
+                                    <li><a href="@Url.Action("Index","Admin")">Species List</a></li>
 
                                 </ul>
                             </li>
