--- a/IBIN/Views/Species/Description.cshtml
+++ b/IBIN/Views/Species/Description.cshtml
@@ -1,4 +1,5 @@
-﻿<style type="text/css">
+﻿@model IBIN.DAL.Species
+<style type="text/css">
     ul {
         list-style: none;
     }
@@ -127,7 +128,7 @@
 
             <div class="col-sm-12 col-xs-12">
                 <div class="imgres">
-                    <img src="~/Content/images/ibinImages/map-over.jpg" class="img-responsive center" />
+                    <img src="~/UploadedFiles/SpeciesFile/@Model.FileName" class="img-responsive center" />
                     <h5>Punica granatum</h5>
                 </div>
             </div>
